--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.campingstudio.agencekotlin">
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.agencekotlin">
         <activity
-            android:name="com.campingstudio.agencekotlin.ui.view.ShoppActivity"
+            android:name=".ui.view.MapVisor"
+            android:exported="false"
+            android:label="@string/title_activity_map_visor"
+            android:theme="@style/Theme.agencekotlin.NoActionBar" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".ui.view.ShoppActivity"
             android:exported="true"
             android:label="@string/title_activity_shop_activity"
-            android:theme="@style/Theme.agencekotlin.NoActionBar" >
+            android:theme="@style/Theme.agencekotlin.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.campingstudio.agencekotlin.ui.view.ProductDetailActivity"
+            android:name=".ui.view.ProductDetailActivity"
             android:exported="true"
             android:label="@string/title_activity_product_detail"
             android:theme="@style/Theme.agencekotlin.NoActionBar" />
         <activity
-            android:name="com.campingstudio.agencekotlin.ui.view.LoginActivity"
+            android:name=".ui.view.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.agencekotlin.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.agencekotlin.NoActionBar" />
     </application>
+
 </manifest>
