--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,19 +55,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
 
     implementation "com.google.firebase:firebase-auth-ktx:21.0.5"
-    // [START gradle_firebase_ui_auth]
     implementation "com.firebaseui:firebase-ui-auth:8.0.1"
-    // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
-    // Add the dependency for the Firebase SDK for Google Analytics
-    // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
-    //SDK de Facebook:
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-
-    //Glide to Show images
-
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    implementation 'com.facebook.android:facebook-login:9.1.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
