--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.campingstudio.agencekotlin" xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.campingstudio.agencekotlin">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -17,10 +18,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.agencekotlin">
         <activity
-            android:name=".ui.view.MapVisor"
-            android:exported="false"
-            android:label="@string/title_activity_map_visor"
-            android:theme="@style/Theme.agencekotlin.NoActionBar" />
+            android:name=".AgenceActivity"
+            android:exported="true"
+            android:label="@string/title_activity_agence"
+            android:theme="@style/Theme.agencekotlin.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -34,35 +42,34 @@
             android:value="@string/google_maps_key" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" tools:replace="android:value" />
-
+            android:value="@string/facebook_app_id"
+            tools:replace="android:value" />
         <meta-data
             android:name="com.facebook.sdk.ClientToken"
-            android:value="@string/facebook_client_token" tools:replace="android:value"/>
+            android:value="@string/facebook_client_token"
+            tools:replace="android:value" />
+
         <activity
-            android:name=".ui.view.ShoppActivity"
+            android:name=".ui.view.home.ShoppActivity"
             android:exported="true"
             android:label="@string/title_activity_shop_activity"
             android:theme="@style/Theme.agencekotlin.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name=".ui.view.ProductDetailActivity"
+            android:name=".ui.view.product_detail.ProductDetailActivity"
             android:exported="true"
             android:label="@string/title_activity_product_detail"
             android:theme="@style/Theme.agencekotlin.NoActionBar" />
         <activity
-            android:name=".ui.view.LoginActivity"
+            android:name=".ui.view.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.agencekotlin.NoActionBar" />
-        <provider android:authorities="com.facebook.app.FacebookContentProvider274109678203497"
+
+        <provider
             android:name="com.facebook.FacebookContentProvider"
-            android:exported="true"  />
+            android:authorities="com.facebook.app.FacebookContentProvider274109678203497"
+            android:exported="true" />
     </application>
 
 </manifest>
